solved some bugs preventing the program from starting on a fresh database